# N-Gram-Model

./: README.md  app.py  model.joblib  pyproject.toml
models/: model.pkl
service/: classes.py  predict.py  run.py  train.py
service/data/: directory.txt
service/data/files/: essay-1.txt  essay-2.txt
